<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchShowFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_full_name"
        android:layout_marginBottom="8dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchShowGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_gender"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchShowAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_age"
        android:layout_marginTop="8dp"/>

</LinearLayout>