<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/deep_blue"
    android:padding="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivWelcomeIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_new"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_re_match"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/light_blue"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/ivWelcomeIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/it_s_your_first_time_logging_in"
        android:textSize="16sp"
        android:textColor="@color/light_blue"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/light_blue"
        android:textColor="@color/deep_blue"
        android:text="@string/let_s_go"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>