<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvEditProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/light_blue"
            app:layout_constraintTop_toBottomOf="@id/tvEditProfileTitle"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gaming_region"
                    android:textColor="@color/deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerRegion"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_48dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    style="@style/mySpinnerItemStyle"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPlatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/light_blue"
            app:layout_constraintTop_toBottomOf="@id/cardRegion"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_games"
                    android:textColor="@color/deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerPlatform"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_48dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardGamingHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/light_blue"
            app:layout_constraintTop_toBottomOf="@id/cardPlatform"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gaming_hours"
                    android:textColor="@color/deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/spinnerGamingHours"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_48dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardShortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/light_blue"
            app:layout_constraintTop_toBottomOf="@id/cardGamingHours"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_description"
                    android:textColor="@color/deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etShortDescription"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_48dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:inputType="textMultiLine"
                    android:hint="@string/short_description"
                    android:maxLines="3"
                    android:textColor="@color/deep_blue"
                    android:padding="8dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPreferredGames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardBackgroundColor="@color/light_blue"
            app:layout_constraintTop_toBottomOf="@id/cardShortDescription"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preferred_games"
                    android:textColor="@color/deep_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAddGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:hintEnabled="false"
                    app:endIconMode="clear_text"
                    app:endIconDrawable="@drawable/ic_add_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddGame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Add Preferred Game "
                        android:background="@color/white"
                        android:textColorHint="@color/deep_blue"
                        android:inputType="text"
                        android:textColor="@color/deep_blue"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPreferredGames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textColor="@color/deep_blue"
            android:backgroundTint="@color/light_blue"
            android:padding="12dp"
            android:layout_marginTop="24dp"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/cardPreferredGames"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_changes"
            android:textColor="@color/deep_blue"
            android:backgroundTint="@color/light_blue"
            android:padding="12dp"
            android:layout_marginTop="8dp"
            app:cornerRadius="8dp"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="1dp"
            app:layout_constraintTop_toBottomOf="@id/btnSaveProfile"/>

        <com.example.re_match.ui.views.LoadingView
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>